[package]
name = "ldo_delegate_vp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
alloy-primitives = { version = "0.8.24" }
alloy-contract = { version = "0.12.6" }
alloy-provider = { version = "0.12.6", features = ["reqwest"] }
alloy-sol-types = { version = "0.8.24", features = ["json"] }
alloy-network = "0.12.6"
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
