[package]
name = "ldo_delegate_vp"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[dependencies]
alloy-primitives = "1.5.2"
alloy-contract = "1.2.1"
alloy-provider = { version = "1.2.1", features = ["reqwest"] }
alloy-sol-types = { version = "1.5.2", features = ["json"] }
alloy-network = "1.2.1"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
